@@ -1,0 +1,27 @@
+#!/bin/csh -f
+
+#
+# migrates bib_refs._referencetype_key
+#
+
+
+if ( ${?MGICONFIG} == 0 ) then
+        setenv MGICONFIG /usr/local/mgi/live/mgiconfig
+endif
+
+source ${MGICONFIG}/master.config.csh
+
+cd `dirname $0`
+
+setenv LOG $0.log
+rm -rf $LOG
+touch $LOG
+ 
+date | tee -a $LOG
+
+cat - <<EOSQL | ${PG_DBUTILS}/bin/doisql.csh $0 
+delete from ACC_Accession where _Accession_key >= 968283758;
+delete from BIB_Refs where _Refs_key >= 244823;
+EOSQL
+${MGICACHELOAD}/bibcitation.csh 
+
