@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-11-34
+DATE: 01/18/2018
+STAFF: lec
+CHANGES:
+1)TR12747/publication type : turn off & fix bug
+
 TAG: littriageload-6-0-11-33
 DATE: 12/27/2017
 STAFF: lec
